# Rockola

./: .env.example  .gitignore  Cargo.toml  INSTALACION.md  PASOS_SUBIDA.md  README.md  TODOS.md  package-lock.json  package.json  start.sh  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  event_sink.rs  main.rs  media_server.rs  state.rs
backend/: .env.example  .gitignore  Cargo.toml  run.sh
backend/migrations/: 001_initial.sql  002_media_library.sql  003_downloads_and_admin.sql  004_queue_download_id.sql  005_updates_settings.sql
backend/src/: config.rs  lib.rs  main.rs  models.rs  repository.rs
backend/src/handlers/: admin.rs  credits.rs  downloads.rs  media.rs  mod.rs  queue.rs  search.rs
backend/src/services/: download_worker.rs  mod.rs  search.rs  storage.rs  yt_dlp.rs
backend/tests/: api.rs
core/db/: Cargo.toml
core/db/migrations/: 001_init.sql
core/db/src/: lib.rs
core/domain/: Cargo.toml
core/domain/src/: lib.rs
core/events/: Cargo.toml
core/events/src/: lib.rs
core/player/: Cargo.toml
core/player/src/: lib.rs
core/scan/: Cargo.toml
core/scan/src/: lib.rs
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docs/: admin-panel.md  api.md  arquitectura.md  desktop-kiosk.md  funciones.md  run-local.md  storage-layout.md  updates.md  yt-dlp.md
electron/: main.ts  preload.ts
frontend/: .env.example  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/docker/: nginx.conf
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs  updater.rs
frontend/src/adapters/: MediaSourceAdapter.ts  backendAdapter.ts  index.ts  mockLocalAdapter.ts  mockSpotifyAdapter.ts  mockYoutubeAdapter.ts
frontend/src/components/: ErrorModal.test.tsx  ErrorModal.tsx  Layout.tsx  MediaCard.tsx  PlayerBar.tsx  UpdateSettingsSection.tsx  UpdatesSection.tsx
frontend/src/contexts/: PlayerRefsContext.tsx
frontend/src/pages/: Admin.tsx  Credits.tsx  DisplayConfig.tsx  Home.tsx  Mantenedores.tsx  NowPlaying.tsx  Queue.tsx  TvNowPlaying.tsx
frontend/src/services/: api.test.ts  api.ts  queueApi.ts  unifiedSearch.ts
frontend/src/stores/: adminStore.ts  creditsStore.ts  errorStore.test.ts  errorStore.ts  index.ts  playerStore.ts  queueStore.ts  searchStore.ts  uiStore.ts
frontend/src/types/: credits.ts  media.ts
node/: indexer.ts
shared/: types.ts
src/: App.tsx  index.html
src/components/: ArtistDetail.tsx  ArtistList.tsx  ConfigModal.tsx  Player.tsx  SearchBar.tsx
src/styles/: index.css
ui/: package-lock.json  package.json
ui/src/lib/: settings.ts  tauri.ts
ui/src/pages/: index.astro
ui/src/styles/: global.css
ui/src/ui/: AppShell.tsx  CatalogPage.tsx  PlayerPanel.tsx  RockolaApp.tsx  SettingsPage.tsx  types.ts
ui/src/ui/components/: ArtistModal.tsx  KaraokeOverlay.tsx  QueueBar.tsx  SettingsDrawer.tsx
