[workspace]
resolver = "2"
members = [
  "core/domain",
  "core/events",
  "core/db",
  "core/scan",
  "core/player",
  "apps/desktop/src-tauri"
]

[workspace.dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
time = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
unicode-normalization = "0.1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["fs"] }
mime_guess = "2"
percent-encoding = "2"
rand = "0.8"

