[package]
name = "rockola-backend"
version = "1.0.0"
edition = "2021"
description = "Backend API para Rockola Digital"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
mime_guess = "2"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }

[profile.release]
opt-level = 3
lto = true
