[package]
name = "core-scan"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
time = { workspace = true }

core-db = { path = "../db" }
core-domain = { path = "../domain" }
core-events = { path = "../events" }