[package]
name = "rockola-app"
version = "0.1.0"
description = "Rockola Digital - Jukebox de escritorio"
authors = ["Rockola"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "rockola_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["sync"] }
url = "2"
