[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
unicode-normalization = "0.1"
rusqlite = { workspace = true }
axum = "0.7"
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["fs"] }
mime_guess = "2"
percent-encoding = "2"
rand = { workspace = true }

core-db = { path = "../../../core/db" }
core-scan = { path = "../../../core/scan" }
core-events = { path = "../../../core/events" }
core-domain = { path = "../../../core/domain" }
core-player = { path = "../../../core/player" }
